# nand2tetris-projects

./: .gitignore  README.md
01/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Expand16.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Nand16.hdl  Or16.hdl  Xor.hdl  Xor16.hdl  Xor16.tst
02/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl
03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04/fill/: Fill.asm  Fill.hack
04/mult/: Mult.asm  Mult.hack
05/: CPU.hdl  Computer.hdl  Memory.hdl
06/assembler/: Cargo.toml  README.md
06/assembler/src/: main.rs
06/assembler/src/lib/: errors.rs  instructions.rs  mod.rs
