[package]
	authors = ["Ian Pratt <ianjdpratt@gmail.com>"]
	edition = "2021"
	license = "MIT"
	name    = "assembler"
	version = "0.0.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
	name = "assembler"
	path = "src/lib/mod.rs"

[dependencies]
