[package]
	authors     = ["Ian Pratt <ianjdpratt@gmail.com>"]
	description = "A simple assembler for the Hack assembly."
	edition     = "2021"
	license     = "MIT"
	name        = "assembler"
	version     = "0.0.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
	name = "assembler"
	path = "src/lib/mod.rs"

[dependencies]
	miette     = "5"
	nom        = "7"
nom_locate = "4"
	thiserror  = "1"
